# blind_sharpness_metric

./: .gitignore  CMakeLists.txt  main.cpp
